--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <p>Search for a movie below...</p>
 
 <form method="GET" action="/results">
-  <lable for="search"></lable>
+  <label for="search"></label>
   <input type="text"  id="search" name="movieSearch" />
 
   <input type="submit" />
